Bug 1512597 - Resolve currentcolor in fill and stroke against visited-dependent color. r=xidorn, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D14706